# NumPDE

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  README.md  ci.txt
cmake/Hunter/: config.cmake
cmake/modules/: build_rules.cmake
codetemplates/: homework.cc  homework.h  homework_main.cc  homework_test.cc
developers/: CMakeLists.txt  README.md  build.cmake  homework.h
developers/1DWaveAbsorbingBC/mastersolution/: 1dwaveabsorbingbc_main.cc
developers/AdvectionFV2D/mastersolution/: advectionfv2d.h  advectionfv2d_main.cc
developers/AdvectionSUPG/mastersolution/: advectionsupg.cc  advectionsupg.h  advectionsupg_main.cc
developers/AsymptoticCvgFEM/mastersolution/: asymptoticcvgfem_main.cc
developers/AvgValBoundary/mastersolution/: avgvalboundary_main.cc
developers/BlendedParameterization/: README.md
developers/BlendedParameterization/mastersolution/: MeshTriangleUnitSquareEigen.hpp  blendedparameterization.cc  blendedparameterization.h  blendedparameterization_main.cc  dependencies.cmake
developers/BoundaryWave/mastersolution/: boundarywave.h  boundarywave_main.cc
developers/BurgersEquation/mastersolution/: burgersequation_main.cc
developers/ConsLawWithSource/mastersolution/: conslawwithsource.cc
developers/ContourPlot/mastersolution/: contourplot.h  contourplot_main.cc
developers/CoupledBVPs/: README.md
developers/CoupledBVPs/mastersolution/: coupledbvps.cc  coupledbvps.h
developers/CoupledSecondOrderBVP/mastersolution/: coupledsecondorderbvp_main.cc
developers/DebuggingFEM/mastersolution/: debuggingfem_main.cc  locallaplaceqfe.h  qfeinterpolator.cc  qfeinterpolator.h  qfeprovidertester.h
developers/DebuggingWithGDB/mastersolution/: debuggingwithgdb.cc  (+1 more)
developers/FVMIsentropicEuler/: README.md
developers/FVPsystem/: README.md
developers/GuyerKrumhansl/: README.md
developers/LeastSquaresAdvection/: README.md
developers/NeumannDataRecovery/: README.md
developers/NonConformingCrouzeixRaviartFiniteElements/: consistency_check.md
developers/PLaplacian/: README.md
developers/SUFEM/: README.md
developers/SolAvgBoundary/: README.md
developers/StokesMINIElement/: README.md
developers/StokesPipeFlow/: README.md  StokesPipeFlow.pvsm
developers/TaylorHoodNonMonolithic/: README.md
homeworks/: CMakeLists.txt  build.cmake
homeworks/AsymptoticCvgFEM/: README.md
homeworks/ErrorEstimatesForTraces/: consistency_check.md
homeworks/FVMShallowWater/: README.md
homeworks/IMEXRKSSM/: Merkzettel.txt  README.md
homeworks/IRKDegenerateEvl/: README.md
homeworks/IncidenceMatrices/: inconsistencies.md
homeworks/LeapfrogDissipativeWave/: README.md
homeworks/LeapfrogDissipativeWave/templates/lib/: CMakeLists.txt
homeworks/LeapfrogDissipativeWave/templates/lib/cmake/modules/: build_rules.cmake
homeworks/LinHypDampWaveSys/: README.md
homeworks/SemilinearEllipticBVP/: README.md
include/: ode45.h  systemcall.h
lecturecodes/ConservativeFiniteVolumes/: CMakeLists.txt  consformevldriver.cc  highresevldriver.cc
lecturecodes/ConvectionDiffusion/: CMakeLists.txt  cd_tools.cc  convergence_main.cc  layer_main.cc
lecturecodes/Ode45/: CMakeLists.txt  ode45stiff.cc
lecturecodes/SimpleLinearFEM2D/: CMakeLists.txt  SimpleLinearFEM2D.h  compare_assembly_speed.cc  fe_solver.cc  matrix_assembler.cc  solve_triangular_FEM.cc  vector_assembler.cc
lecturecodes/convergencestudies/: CMakeLists.txt  asymptotic.cc  twopointbvp.cc
scripts/: apply-clang-format-developers.sh  apply-clang-format.sh  assignment_list.json
scripts/ci/: forbid_stdsystem.sh  run-clang-tidy.py  run_lecturecodes.sh  test_developers.sh
(+619 files in other folders)
